--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "20.4.8",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
+    "axios": "^1.4.0",
     "framer-motion": "^10.15.1",
     "next": "13.4.13",
     "react": "18.2.0",
