--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-folder-tree": "^5.1.1",
+    "react-hook-form": "^7.45.4",
     "sass": "^1.64.2",
     "typescript": "5.1.6"
   },
