--- a/package.json
+++ b/package.json
@@ -14,25 +14,25 @@
     "@dnd-kit/utilities": "^3.2.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.11",
-    "@mui/material": "^5.14.11",
-    "@mui/utils": "^5.14.11",
+    "@mui/icons-material": "^5.14.14",
+    "@mui/material": "^5.14.14",
+    "@mui/utils": "^5.14.14",
     "axios": "^1.5.1",
     "framer-motion": "^10.16.4",
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest",
+    "next": "13.5.5",
+    "react": "^18",
+    "react-dom": "^18",
     "react-hook-form": "^7.47.0",
-    "sass": "^1.68.0"
+    "sass": "^1.69.4"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
-    "@types/node": "latest",
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "debug": "^4.3.4",
-    "eslint": "latest",
-    "eslint-config-next": "latest",
-    "typescript": "latest"
+    "eslint": "^8",
+    "eslint-config-next": "13.5.5",
+    "typescript": "^5"
   }
 }
